--- a/src/Style/Hero.css
+++ b/src/Style/Hero.css
@@ -5,3 +5,19 @@
     gap: 20px;
     padding: 2rem;
 }
+@media only screen and (min-width: 550px) and (max-width: 768px) {
+    .hero-content{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+}
+@media only screen and (min-width: 250px) and (max-width: 549px) {
+    .hero-content{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       
+    }
+}
