--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -1,3 +1,27 @@
+.menu {
+  display: none;
+  position: absolute;
+  top: 10%;
+  left: 215px;
+  background-color: rgba(51, 51, 51, 0.9); /* Slightly transparent black background */
+  width: 50%;
+  text-align: center;
+  z-index: 1000; 
+  flex-direction: column;
+  transition: opacity 0.5s; /* 0.5s transition for opacity */
+  opacity: 0;
+}
+.menu a {
+  color: #f6f6f6;
+  padding: 10px 0px;
+}
+
+.menu.active {
+  display: flex;
+  opacity: 1; /* Fade in when active */
+}
+
+
 .nav-content {
   display: flex;
   justify-content: space-between;
@@ -49,6 +73,12 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .menu {
+   
+    left: 385px;
+    
+  }
+  
   .search-container input {
     /* padding: 12px 20px 12px 40px; */
     width: 200px;
