--- a/src/Style/Card.css
+++ b/src/Style/Card.css
@@ -24,10 +24,19 @@
 .text-container a{
     padding-top: 10px;
     font-weight: 600;
+    color: #ffffff;
 }
 .text-container p{
     font-size: 12px;
     font-weight: 600;
+}
+.card-container button{
+  font-weight: 600;
+  padding: 8px 18px;
+  border-radius: 8px;
+  border: none;
+  font-size: 10px;
+  cursor: pointer;
 }
 @media (min-width:250px) and (max-width:510px){
   .card-container {
