--- a/src/Style/Card2.css
+++ b/src/Style/Card2.css
@@ -20,6 +20,14 @@
   line-height: 27.93px;
   font-weight: 500;
 }
+.card-2-container button{
+  font-weight: 600;
+  padding: 8px 18px;
+  border-radius: 8px;
+  border: none;
+  font-size: 10px;
+  cursor: pointer;
+}
 @media (min-width:769px){
   .card-2-container img {
     max-width: 180px;
