--- a/src/Style/Card4.css
+++ b/src/Style/Card4.css
@@ -28,9 +28,17 @@
   font-size: 12px;
   font-weight: 600;
 }
+.card-container-22 button {
+  font-weight: 600;
+  padding: 8px 18px;
+  border-radius: 8px;
+  border: none;
+  font-size: 10px;
+  cursor: pointer;
+}
 
-@media (min-width:250px) and (max-width:390px){
-  .card-container-22 img{
+@media (min-width: 250px) and (max-width: 390px) {
+  .card-container-22 img {
     max-width: 300px;
   }
   .text-container-22 {
@@ -40,7 +48,5 @@
   }
   .text-container-22 a {
     padding-top: 50px;
-    
   }
 }
-
