--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -3,10 +3,15 @@
   position: absolute;
   top: 10%;
   left: 215px;
-  background-color: rgba(51, 51, 51, 0.9); /* Slightly transparent black background */
+  background-color: rgba(
+    51,
+    51,
+    51,
+    0.9
+  ); /* Slightly transparent black background */
   width: 50%;
   text-align: center;
-  z-index: 1000; 
+  z-index: 1000;
   flex-direction: column;
   transition: opacity 0.5s; /* 0.5s transition for opacity */
   opacity: 0;
@@ -20,7 +25,6 @@
   display: flex;
   opacity: 1; /* Fade in when active */
 }
-
 
 .nav-content {
   display: flex;
@@ -74,11 +78,9 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .menu {
-   
     left: 385px;
-    
   }
-  
+
   .search-container input {
     /* padding: 12px 20px 12px 40px; */
     width: 200px;
@@ -116,8 +118,8 @@
     width: 1.5rem;
   }
 }
-@media (min-width:769px){
-  .menu-button{
+@media (min-width: 769px) {
+  .menu-button {
     display: none;
   }
 }
